# Project1

./: .gitignore  ProjectDescription.txt  README.md  README.md~
appdirectory/: Ball.cpp  Ball.h  BaseApplication.cpp  BaseApplication.h  BulletEntities.cpp  BulletEntities.h  GUI.cpp  GUI.h  GameManager.cpp  GameManager.h  Makefile  Makefile.am  Makefile.in  MyMotionState.cpp  MyMotionState.h  OgreApp  Paddle.cpp  Paddle.h  Physics.cpp  Physics.h  Room.cpp  Room.h  Sound.cpp  Sound.h  TutorialApplication.cpp  TutorialApplication.h  assignment2  config.status  configure  configure.ac  libtool  ogre.cfg  resources.cfg  scoreBoard.cpp  scoreBoard.h
appdirectory/.deps/: OgreApp-BaseApplication.Po  OgreApp-TutorialApplication.Po  assignment2-BaseApplication.Po  assignment2-BulletEntities.Po  assignment2-GUI.Po  assignment2-GameManager.Po  assignment2-MyMotionState.Po  assignment2-Physics.Po  assignment2-Sound.Po  assignment2-TutorialApplication.Po  assignment3-Ball.Po  assignment3-BaseApplication.Po  assignment3-GUI.Po  assignment3-GameManager.Po  assignment3-MyMotionState.Po  assignment3-Paddle.Po  assignment3-Physics.Po  assignment3-Room.Po  assignment3-Sound.Po
appdirectory/CEGUI-0.8.7/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
appdirectory/CEGUI-0.8.7/application_templates/: Makefile  cmake_install.cmake
appdirectory/CEGUI-0.8.7/cegui/src/: Makefile  cmake_install.cmake
appdirectory/CEGUI-0.8.7/datafiles/: Makefile  cmake_install.cmake
appdirectory/CEGUI-0.8.7/doc/doxygen/: doxyfile
appdirectory/CEGUI-0.8.7/samples/: Makefile  cmake_install.cmake
appdirectory/CEGUI-0.8.7/samples/CommonDialogsDemo/: Makefile  cmake_install.cmake
appdirectory/CEGUI-0.8.7/samples/Demo6/: Makefile  cmake_install.cmake
appdirectory/CEGUI-0.8.7/samples/DragDropDemo/: Makefile  cmake_install.cmake
appdirectory/CEGUI-0.8.7/samples/EditboxValidationDemo/: Makefile  cmake_install.cmake
appdirectory/CEGUI-0.8.7/samples_framework/: Makefile  cmake_install.cmake
appdirectory/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
(+60 files in other folders)
